# object-store-python

./: .gitignore  Cargo.toml  default.nix  flake.nix  lock.default.linux.json  lock.dev.linux.json  pyproject.toml
object-store/: pyproject.toml
